force-app/main/default/objects/xDO_TTHAIR_FlightNumber__c/xDO_TTHAIR_FlightNumber__c.object-meta.xml
<CustomObject>
    <label>TTH Flight Number</label>
    <nameField>
        <label>Flight Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Flight Number</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>