force-app/main/default/objects/xDO_TTHAIR_FlightNumber__c/fields/xDO_TTHAIR_ARR_CITY__c.field-meta.xml
<CustomField>
    <fullName>xDO_TTHAIR_ARR_CITY__c</fullName>
    <label>ARR CITY</label>
    <length>20</length>
    <type>Text</type>
</CustomField>