force-app/main/default/objects/xDO_TTHAIR_FlightNumber__c/fields/xDO_TTHAIR_ARR_CODE__c.field-meta.xml
<CustomField>
    <fullName>xDO_TTHAIR_ARR_CODE__c</fullName>
    <label>ARR CODE</label>
    <length>3</length>
    <type>Text</type>
</CustomField>