force-app/main/default/objects/xDO_TTHAIR_FlightNumber__c/fields/xDO_TTHAIR_Flight_Name__c.field-meta.xml
<CustomField>
    <fullName>xDO_TTHAIR_Flight_Name__c</fullName>
    <label>Flight Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>