force-app/main/default/objects/xDO_TTHAIR_FlightNumber__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>xDO_TTHAIR_ARR_CITY__c</columns>
    <columns>xDO_TTHAIR_ARR_CODE__c</columns>
    <columns>xDO_TTHAIR_DEP_CITY__c</columns>
    <columns>xDO_TTHAIR_DEP_CODE__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>